--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/server/index.js",
-    "build": "webpack",
+    "build": "webpack-dev-server --config webpack.config.js --open",
     "build-prod": "webpack --config webpack.prod.js",
     "build-dev": "webpack-dev-server  --config webpack.dev.js --open"
   },
@@ -33,6 +33,7 @@
     "node-sass": "^7.0.1",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
-    "terser-webpack-plugin": "^5.3.1"
+    "terser-webpack-plugin": "^5.3.1",
+    "webpack-dev-server": "^4.8.1"
   }
 }
