--- a/package.json
+++ b/package.json
@@ -12,12 +12,18 @@
   "author": "",
   "license": "ISC",
   "description": "",
+  "jest": {
+    "verbose": true,
+    "automock": false,
+    "setupFiles": [
+      "<rootDir>/src/setupJest.js"
+    ]
+  },
   "dependencies": {
     "@babel/runtime": "^7.17.9",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "jest-fetch-mock": "^3.0.3",
     "webpack": "^5.71.0",
     "webpack-cli": "^4.9.2"
   },
@@ -31,6 +37,7 @@
     "css-minimizer-webpack-plugin": "^3.4.1",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.5.1",
+    "jest-fetch-mock": "^3.0.3",
     "mini-css-extract-plugin": "^2.6.0",
     "node-sass": "^7.0.1",
     "sass-loader": "^12.6.0",
