--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "webpack": "^5.71.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "workbox-webpack-plugin": "^6.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
